--- a/build.gradle
+++ b/build.gradle
@@ -11,15 +11,33 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'com.github.sherter.google-java-format'
+apply plugin: 'project-report'
+
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    testCompile (group: 'junit', name: 'junit', version: '4.+')
+}
+dependencyReport {
+
+        }
+task copyJars(type:Copy){
+    from configurations.runtime
+    into 'libs'
 }
 
+test.doFirst {
+    jvmArgs "-javaagent:${configurations.agent.singleFile}"
+}
+test {
+    useTestNG() {
+        suiteXmlFiles << new File(rootDir, "testng.html")
+    }
+}
 tasks.withType(JavaCompile) { 
     options.compilerArgs << "-Xlint:all" 
 }
+
